// Database schema for Multi-Track Ticketing Backend (PostgreSQL).
// Keep in sync with migrations/*.up.sql. Update after any migration change (see .cursor/skills/update-db-schema-docs).

Table events {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null]
  event_code char(4) [unique]
  owner_id uuid [not null, ref: > users.id]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
  date timestamptz
  description text
  location_lat double
  location_lng double

  indexes {
    owner_id
  }
}

Table rooms {
  id uuid [pk, default: `gen_random_uuid()`]
  event_id uuid [not null, ref: > events.id]
  name varchar(255) [not null]
  source_session_id int
  source varchar(20)
  not_bookable boolean [not null, default: `false`]
  capacity int
  description text
  how_to_get_there text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    (event_id, source_session_id) [unique]
    event_id
  }
}

Table sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  room_id uuid [not null, ref: > rooms.id]
  source_session_id varchar(50)
  source varchar(20)
  title varchar(255) [not null]
  start_time timestamptz [not null]
  end_time timestamptz [not null]
  description text
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    (room_id, source_session_id) [unique]
    room_id
  }
}

Table tags {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(255) [not null, unique]
}

Table session_tags {
  session_id uuid [not null, ref: > sessions.id]
  tag_id uuid [not null, ref: > tags.id]

  indexes {
    (session_id, tag_id) [pk]
    session_id
    tag_id
  }
}

Table event_tags {
  event_id uuid [not null, ref: > events.id]
  tag_id uuid [not null, ref: > tags.id]

  indexes {
    (event_id, tag_id) [pk]
    event_id
    tag_id
  }
}

Table speakers {
  id uuid [pk, default: `gen_random_uuid()`]
  event_id uuid [not null, ref: > events.id]
  source_session_id varchar(100) [not null]
  source varchar(20)
  first_name varchar(255) [not null, default: `''`]
  last_name varchar(255) [not null, default: `''`]
  bio text [not null, default: `''`]
  tag_line varchar(512) [not null, default: `''`]
  profile_picture text [not null, default: `''`]
  is_top_speaker boolean [not null, default: `false`]
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]

  indexes {
    (event_id, source_session_id) [unique]
    event_id
  }
}

Table session_speakers {
  session_id uuid [not null, ref: > sessions.id]
  speaker_id uuid [not null, ref: > speakers.id]

  indexes {
    (session_id, speaker_id) [pk]
    session_id
    speaker_id
  }
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null, unique]
  name varchar(255)
  last_name varchar(255)
  created_at timestamptz [default: `now()`]
  updated_at timestamptz [default: `now()`]
}

Table login_codes {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [not null]
  code_hash text [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [default: `now()`]

  indexes {
    email
    expires_at
  }
}

Table event_team_members {
  event_id uuid [not null, ref: > events.id]
  user_id uuid [not null, ref: > users.id]

  indexes {
    (event_id, user_id) [pk]
    event_id
    user_id
  }
}

Table roles {
  id uuid [pk, default: `gen_random_uuid()`]
  code varchar(64) [not null, unique]
}

Table user_roles {
  user_id uuid [not null, ref: > users.id]
  role_id uuid [not null, ref: > roles.id]

  indexes {
    (user_id, role_id) [pk]
    user_id
    role_id
  }
}

Table event_registrations {
  id uuid [pk, default: `gen_random_uuid()`]
  event_id uuid [not null, ref: > events.id]
  user_id uuid [not null, ref: > users.id]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (event_id, user_id) [unique]
    event_id
    user_id
  }
}

Table event_invitations {
  id uuid [pk, default: `gen_random_uuid()`]
  event_id uuid [not null, ref: > events.id]
  email varchar(255) [not null]
  sent_at timestamptz [not null, default: `now()`]

  indexes {
    (event_id, email) [unique]
    event_id
  }
}
